--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contact-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://allans-dev.github.io/contact-list",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
